# VibraVision

./: .env  Dockerfile  README.md  blueprint.md  index.html  package-lock.json  package.json  pubspec.yaml  server.js  technical_architecture.md  techstack.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  dsp_core.h  native_lib.cpp  native_lib.cpp.backup
android/app/src/main/kotlin/com/example/vibravision/: MainActivity.kt
android/sdk/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/services/: native_bridge.dart
